[refactor] http response
